[package]
name = "dxgcap"
version = "0.1.0"
authors = ["bryal <96.bryal@gmail.com>"]
description = "Screen capturing with DXGI for Windows in Rust"
repository = "https://github.com/bryal/dxgcap-rs"
documentation = "http://bryal.github.io/dxgcap-rs/dxgcap/"
readme = "README.md"
keywords = ["Windows", "DXGI", "screen", "record", "capture"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3.8", features = ["d3d11", "d3dcommon", "dxgi", "dxgi1_2", "dxgitype", "ntdef", "unknwnbase", "windef", "winerror", "winuser"] }
wio = "0.2.2"